fixed z-index of popup

--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -158,6 +158,7 @@ table .selected:before {
   opacity: 0.95;
   color: white;
   font-size: 14px;
+  z-index: 10;
 }
 
 .menu {
